--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arthur Fabre</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/favicon_light.webp" type="image/webp">
+    <link rel="icon" href="assets/favicon.webp" type="image/webp">
     <meta name="description" content="Arthur Fabre">
     <meta name="keywords" content="Arthur Fabre, Artworks, Book, Noises, Band">
     <meta name="robots" content="index, follow">
