--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arthur Fabre</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/favicon.webp" type="image/webp">
     <meta name="description" content="Arthur Fabre">
@@ -17,38 +18,46 @@
 </head>
 
 <body>
-    <div class="home">
-        <img src="assets/home.webp" alt="home">
-        <h1>Arthur Fabre</h1>
-        <a href="tel:07.70.19.01.04">07.70.19.01.04</a>
-        <a href="mailto:arthur.e.fabre@gmail.com">arthur.e.fabre@gmail.com</a>
-    </div>
-    <ul class="links">
-        <li>
-            <a href="https://arthurfabre.tumblr.com/" class="link link--artworks">
-                <img src="assets/artworks_static.webp" alt="artworks icon">
-                <h2>Artworks</h2>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="link link--book">
-                <img src="assets/book_static.webp" alt="book icon">
-                <h2>Book</h2>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="link link--noises">
-                <img src="assets/noises_static.webp" alt="noises icon">
-                <h2>Noises</h2>
-            </a>
-        </li>
-        <li>
-            <a href="#" class="link link--band">
-                <img src="assets/band_static.webp" alt="band icon">
-                <h2>Band</h2>
-            </a>
-        </li>
-    </ul>
+    <section class="landing-page">
+        <div class="home">
+            <img src="assets/home.webp" alt="home">
+            <h1>Arthur Fabre</h1>
+            <a href="tel:07.70.19.01.04">07.70.19.01.04</a>
+            <a href="mailto:arthur.e.fabre@gmail.com">arthur.e.fabre@gmail.com</a>
+        </div>
+        <ul class="links">
+            <li>
+                <a href="#artworks" class="link link--artworks">
+                    <img src="assets/artworks_static.webp" alt="artworks icon">
+                    <h2>Artworks</h2>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="link link--book">
+                    <img src="assets/book_static.webp" alt="book icon">
+                    <h2>Book</h2>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="link link--noises">
+                    <img src="assets/noises_static.webp" alt="noises icon">
+                    <h2>Noises</h2>
+                </a>
+            </li>
+            <li>
+                <a href="#" class="link link--band">
+                    <img src="assets/band_static.webp" alt="band icon">
+                    <h2>Band</h2>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <section id="artworks" class="artworks">
+        <img src="assets/artworks/image_01.png">
+        <img src="assets/artworks/image_02.png">
+        <img src="assets/artworks/image_01.png">
+        <img src="assets/artworks/image_02.png">
+    </section>
 </body>
 
 </html>
