--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
         <div class="home">
             <img src="assets/home.webp" alt="home">
             <h1>Arthur Fabre</h1>
-            <a href="tel:07.70.19.01.04">07.70.19.01.04</a>
-            <a href="mailto:arthur.e.fabre@gmail.com">arthur.e.fabre@gmail.com</a>
+            <p>Ø7.7Ø.19.Ø1.Ø4</a>
+            <p>arthur.e.fabre@gmail.com</a>
         </div>
         <ul class="links">
             <li>
                 <a href="#artworks" class="link link--artworks">
                     <img src="assets/artworks_static.webp" alt="artworks icon">
-                    <h2>Artworks</h2>
+                    <h2>ArtwØrks</h2>
                 </a>
             </li>
             <li>
                 <a href="#" class="link link--book">
                     <img src="assets/book_static.webp" alt="book icon">
-                    <h2>Book</h2>
+                    <h2>BØØk</h2>
                 </a>
             </li>
             <li>
                 <a href="#" class="link link--noises">
                     <img src="assets/noises_static.webp" alt="noises icon">
-                    <h2>Noises</h2>
+                    <h2>NØises</h2>
                 </a>
             </li>
             <li>
