--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <section class="landing-page">
         <div class="home">
-            <img src="assets/home.webp" alt="home">
+            <a href="#"><img src="assets/home.webp" alt="home"></a>
             <h1>Arthur Fabre</h1>
             <p>Ø7.7Ø.19.Ø1.Ø4</a>
             <p>arthur.e.fabre@gmail.com</a>
