--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
     <link rel="preload" href="assets/band.webp" as="image">
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 
 <body>
