--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
     <link rel="preload" href="assets/band.webp" as="image">
-    <script type="module" src="main.js"></script>
 </head>
 
 <body>
@@ -59,6 +58,8 @@
         <ul id="right-column"></ul>
     </section>
 
+    <script src="header.js"></script>
+    <script src="artworks.js"></script>
 </body>
 
 </html>
