--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="link link--noises">
+                <a href="https://www.instagram.com/jackofnone_masterofnone/" class="link link--noises">
                     <img src="assets/noises_static.webp" alt="noises icon">
                     <h2>NØises</h2>
                 </a>
             </li>
             <li>
-                <a href="#" class="link link--band">
+                <a href="https://hundredeyestheband.bandcamp.com/album/faking-and-pretending" class="link link--band">
                     <img src="assets/band_static.webp" alt="band icon">
                     <h2>Band</h2>
                 </a>
