--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/jackofnone_masterofnone/" class="link link--noises">
+                <a href="https://www.instagram.com/jackofnone_masterofnone/" target="_blank" class="link link--noises">
                     <img src="assets/noises_static.webp" alt="noises icon">
                     <h2>NØises</h2>
                 </a>
