--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://hundredeyestheband.bandcamp.com/album/faking-and-pretending" class="link link--band">
+                <a href="https://hundredeyestheband.bandcamp.com/album/faking-and-pretending" target="_blank" class="link link--band">
                     <img src="assets/band_static.webp" alt="band icon">
                     <h2>Band</h2>
                 </a>
