--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li>
-                <a href="assets/_book.pdf" class="link link--book">
+                <a href="assets/book.pdf" class="link link--book">
                     <img src="assets/book_static.webp" alt="book icon">
                     <h2>BØØk</h2>
                 </a>
