--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/favicon.webp" type="image/webp">
     <meta name="description" content="Arthur Fabre">
     <meta name="keywords" content="Arthur Fabre, Artworks, Book, Noises, Band">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, nosnippet">
     <link rel="preload" href="assets/artworks.webp" as="image">
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
@@ -52,7 +52,6 @@
             </li>
         </ul>
     </section>
-    <div id="top-of-site-pixel-anchor"></div>
     <section id="artworks" class="artworks">
         <ul id="left-column"></ul>
         <ul id="right-column"></ul>
