--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
     <link rel="preload" href="assets/band.webp" as="image">
+    <script defer src="https://umami.nans.work/script.js" data-website-id="4fdf9428-0201-4f6e-a20f-26c5b0ba3f78"></script>
 </head>
 
 <body>
@@ -27,25 +28,25 @@
     <section class="links">
         <ul>
             <li>
-                <a href="#artworks" class="link link--artworks">
+                <a href="#artworks" data-umami-event="Artworks link" class="link link--artworks">
                     <img src="assets/artworks_static.webp" alt="artworks icon">
                     <h2>ArtwØrks</h2>
                 </a>
             </li>
             <li>
-                <a href="assets/book.pdf" class="link link--book">
+                <a href="assets/book.pdf" data-umami-event="Book link" class="link link--book">
                     <img src="assets/book_static.webp" alt="book icon">
                     <h2>BØØk</h2>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/jackofnone_masterofnone/" target="_blank" class="link link--noises">
+                <a href="https://www.instagram.com/jackofnone_masterofnone/" data-umami-event="Instagram link" target="_blank" class="link link--noises">
                     <img src="assets/noises_static.webp" alt="noises icon">
                     <h2>NØises</h2>
                 </a>
             </li>
             <li>
-                <a href="https://hundredeyestheband.bandcamp.com/album/faking-and-pretending" target="_blank" class="link link--band">
+                <a href="https://hundredeyestheband.bandcamp.com/album/faking-and-pretending" data-umami-event="Hundred eyes link" target="_blank" class="link link--band">
                     <img src="assets/band_static.webp" alt="band icon">
                     <h2>Band</h2>
                 </a>
