--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li>
-                <a href="assets/book.pdf" data-umami-event="Book link" class="link link--book">
+                <a href="assets/BOOK_ArthurFabre.pdf" data-umami-event="Book link" class="link link--book">
                     <img src="assets/book_static.webp" alt="book icon">
                     <h2>BØØk</h2>
                 </a>
