--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
     <link rel="preload" href="assets/band.webp" as="image">
+    <link rel="preload" href="assets/whatido.webp" as="image">
     <script defer src="https://umami.nans.work/script.js" data-website-id="4fdf9428-0201-4f6e-a20f-26c5b0ba3f78"></script>
 </head>
 
@@ -43,6 +44,12 @@
                 <a href="https://www.instagram.com/jackofnone_masterofnone/" data-umami-event="Instagram link" target="_blank" class="link link--noises">
                     <img src="assets/noises_static.webp" alt="noises icon">
                     <h2>NØises</h2>
+                </a>
+            </li> 
+            <li>
+                <a href="assets/whatIDo_en_Web.pdf" data-umami-event="whatido link" class="link link--whatido">
+                    <img src="assets/whatido_static.webp" alt="whatido icon">
+                    <h2>What I dØ</h2>
                 </a>
             </li>
             <li>
