new text added in the header

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1>Arthur Fabre</h1>
         <p>+353 (85) 18.Ø5.41Ø</p>
         <p>arthur.e.fabre@gmail.com</p>
+        <p>free-lance directeur artistique graphiste illustrateur</p>
     </header>
     <section class="links">
         <ul>
