--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <h1>Arthur Fabre</h1>
         <p>+353 (85) 18.Ø5.41Ø</p>
         <p>arthur.e.fabre@gmail.com</p>
-        <p>free-lance directeur artistique graphiste illustrateur</p>
+        <p>•</p>
+        <p>independant art director</p>
+         <p> graphic designer</p>
+        <p>illustratorr</p>
     </header>
     <section class="links">
         <ul>
