--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>•</p>
         <p>independant art director</p>
          <p> graphic designer</p>
-        <p>illustratorr</p>
+        <p>illustrator</p>
     </header>
     <section class="links">
         <ul>
