--- a/index.html
+++ b/index.html
@@ -54,7 +54,19 @@
                     <img src="assets/noises_static.webp" alt="noises icon">
                     <h2>NØises</h2>
                 </a>
-            </li> 
+            </li>
+            <li>
+                <a href="https://www.instagram.com/arthure.4000/" data-umami-event="Instagram personal link" target="_blank" class="link link--insta">
+                    <img src="assets/Insta_static.webp" alt="insta icon">
+                    <h2>INSTA</h2>
+                </a>
+            </li>
+            <li>
+                <a href="https://arthureprint.etsy.com" data-umami-event="Shop link" target="_blank" class="link link--shop">
+                    <img src="assets/Shop_static.webp" alt="shop icon">
+                    <h2>SHØP</h2>
+                </a>
+            </li>
         
            
         </ul>
