--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="preload" href="assets/book.webp" as="image">
     <link rel="preload" href="assets/noises.webp" as="image">
     <link rel="preload" href="assets/whatido.webp" as="image">
+    <link rel="preload" href="assets/Insta.webp" as="image">
+    <link rel="preload" href="assets/Shop.webp" as="image">
     <script defer src="https://umami.nans.work/script.js" data-website-id="4fdf9428-0201-4f6e-a20f-26c5b0ba3f78"></script>
 </head>
 
